--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
 .navbar {
   background-color: purple;
   color: white;
-  position: static;
+  position: sticky;
   top: 0;
   left: 0;
   width: 100%;
@@ -68,6 +68,23 @@ body {
   background-color: white;
   color: purple;
   border-color: purple;
+}
+
+.sections {
+  height: 30vw;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+  padding: 0 2rem;
+  margin: 1rem;
+  border: 1px solid rgb(183, 183, 183);
+  border-radius: 5px;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.sections p {
+  word-spacing: 5px;
 }
 
 .highlight {
