--- a/styles.css
+++ b/styles.css
@@ -71,12 +71,12 @@ body {
 }
 
 .sections {
-  height: 30vw;
+  min-height: 30vw;
   display: flex;
   flex-direction: column;
   align-items: start;
   justify-content: center;
-  padding: 0 2rem;
+  padding: 2rem;
   margin: 1rem;
   border: 1px solid rgb(183, 183, 183);
   border-radius: 5px;
