--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
 }
 
 .navbar {
-  background-color: purple;
+  background-color: #232f3e;
   color: white;
   position: sticky;
   top: 0;
@@ -22,7 +22,8 @@ body {
 .navbar ul {
   display: flex;
   margin: 0;
-  padding: 30px 0;
+  padding: 20px 0;
+  padding-left: 20px;
 }
 
 .navbar ul li {
@@ -33,7 +34,8 @@ body {
   text-decoration: none;
   color: white;
   margin: 0 10px;
-  font-size: 1rem;
+  font-size: 1.2rem;
+  font-weight: bold;
 }
 
 .navbar ul li a:hover {
@@ -53,7 +55,7 @@ body {
   padding-right: 5px;
 }
 
-.search-box button {
+/* .search-box button {
   padding: 7px;
   text-align: center;
   cursor: pointer;
@@ -68,7 +70,7 @@ body {
   background-color: white;
   color: purple;
   border-color: purple;
-}
+} */
 
 .sections {
   min-height: 30vw;
@@ -77,7 +79,7 @@ body {
   align-items: start;
   justify-content: center;
   padding: 2rem;
-  margin: 1rem;
+  margin: 4rem 2rem;
   border: 1px solid rgb(183, 183, 183);
   border-radius: 5px;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
